[docs] Update the FAQ

--- a/docs/src/pages/faq.mdx
+++ b/docs/src/pages/faq.mdx
@@ -2,3 +2,19 @@
 
 Have a question? Join [our Discord](https://discord.gg/tdRmQQXAhY) or email us
 at help@fixpoint.co. We'll put common questions in here.
+
+## Where is the code?
+
+You can find the code on Github: https://github.com/gofixpoint/fixpoint/
+
+Fixpoint is fully open-source, so what you see is what we run!
+
+
+## How can I get access to the Fixpoint platform?
+
+If you don't want to run Fixpoint's infra yourself, you can use our hosted
+platform. We'll take care of all of the devops infra for you, so you can just
+focus on writing your LLM workflows and applications.
+
+The hosted platform is in development, so
+[join our waitlist](https://fixpoint.co/waitlist).
