--- a/docs/src/pages/workflows-and-durability/workflows.mdx
+++ b/docs/src/pages/workflows-and-durability/workflows.mdx
@@ -2,14 +2,21 @@
 
 There are two ways of modeling workflows:
 
-1. **Structured workflows**: let you decorate your normal Python functions and
+1. **Structured Workflows**: let you decorate your normal Python functions and
    classes so what looks like a normal program gets the abilities of:
    durability, AI memory, human-in-the-loop, and workflow-specific RAG.
-2. **Request/Reply workflows**: a client/server request/response model. This is
+2. **Request/Reply Workflows**: a client/server request/response model. This is
    well suited for chatbots where the workflow only advances to the next step
-   after a user interaction. The Form Agent is an example of this.
+   after a user interaction.
+3. **Imperative Workflows**: this is a lower-level API that gives you direct
+   control over a workflow's run. You can control the tasks and steps within a
+   workflow, and the documents, forms, and memories available to your AI agents.
 
-## Structured workflows
+When using workflows, you first define a `Workflow` and run instances of it by
+creating `WorkflowRun` objects. The interface for doing this depends on what
+type of workflow you are using, so read on for more details.
+
+## Structured Workflows
 
 Structured workflows let you decorate functions and classes to define workflows
 that are [durable][durable], give agents memory about the steps the tasks and
@@ -26,9 +33,31 @@ See more docs and an example in the
 [structured workflows section](/workflows-and-durability/structured-workflows).
 
 
-## Request/Reply workflows
+## Request/Reply Workflows
 
 _docs coming soon_
 
+
+## Imperative Workflows
+
+The Imperative Workflows API is a lower-level API. Structured Workflows and
+Request/Reply Workflows are built on top of it. If one of the higher level APIs
+fits better, use that, but we don't discourage you from directly using the
+Imperative Workflow API.
+
+The Imperative Workflow API lets you directly control:
+
+- the state of a running workflow
+- the tasks and steps within a workflow and transitions between tasks and steps
+- the documents available for your AI agents to search over
+- the forms available for your AI agents to fill out
+
+Within a workflow run, your AI agents have access to their "memories", aka all
+past inference requests within a workflow run.
+
+_more docs coming soon_
+
+
 [durable]: /workflows-and-durability
 [structured-programming]: https://en.wikipedia.org/wiki/Structured_programming
+
